--- a/selector.html
+++ b/selector.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/selectors.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Selectors
-    </h1>
-    <div class="box">
-        <p>Paragraph 1</p>
+    <h1>Selectors</h1>
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, eius laborum commodi rerum voluptas qui quaerat perspiciatis molestias sit quis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
     </div>
 </body>
 </html>
