--- a/selector.html
+++ b/selector.html
@@ -8,10 +8,30 @@
 </head>
 <body>
     <h1>Selectors</h1>
-    <div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, eius laborum commodi rerum voluptas qui quaerat perspiciatis molestias sit quis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
+    <div class="box1">
+        <div class="content">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, eius laborum commodi rerum voluptas qui quaerat perspiciatis molestias sit quis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
+        
+        <ul class="content">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
+        </div>
     </div>
+
+    <div class="food-list">
+        <h2>Food Items</h2>
+        <ul>
+            <li>Pizza</li>
+            <li>Burger</li>
+            <li>Pasta</li>
+            <li>Sushi</li>
+            <li>Salad</li>
+        </ul>
+    </div>
+
 </body>
 </html>
