--- a/selector.html
+++ b/selector.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/offline-font.css">
     <link rel="stylesheet" href="css/selectors.css">
     <title>Document</title>
 </head>
@@ -33,5 +34,25 @@
         </ul>
     </div>
 
+    <div class="flower-list">
+        <h2>Flowers</h2>
+        <ul>
+            <li>
+                Rose: A symbol of love and passion.
+            </li>
+            <li>
+                Tulip: Known for its bright and cheerful colors.
+            </li>
+            <li>
+                Sunflower: Represents adoration and loyalty.
+            </li>
+            <li>
+                Daisy: Symbolizes innocence and purity.
+            </li>
+            <li>
+                Lily: Often associated with purity and refined beauty.
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
