--- a/selector.html
+++ b/selector.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/offline-font.css">
     <link rel="stylesheet" href="css/selectors.css">
-    <title>Document</title>
+    <title>Selectors</title>
 </head>
 <body>
     <h1>Selectors</h1>
@@ -15,7 +15,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, nisi?</p>
         
-        <ul class="content">
+        <ul>
             <li>Item 1</li>
             <li>Item 2</li>
             <li>Item 3</li>
