--- a/position.html
+++ b/position.html
@@ -15,5 +15,9 @@
     <div class="relative-box">
         <div class="circle"></div>
     </div>
+    <div class="door">
+        <div class="single-door left"></div>
+        <div class="single-door right"></div>
+    </div>
 </body>
 </html>
