--- a/position.html
+++ b/position.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/position.css">
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/offline-font.css">
     <title>Position</title>
 </head>
 <body>
@@ -16,8 +17,10 @@
         <div class="circle"></div>
     </div>
     <div class="door">
+        
         <div class="single-door left"></div>
         <div class="single-door right"></div>
+        <h2 class="welcome">Welcome</h2>
     </div>
 </body>
 </html>
