--- a/position.html
+++ b/position.html
@@ -12,15 +12,20 @@
     <h1>Position</h1>
     <h2>static</h2>
     <div class="static-box"></div>
+    <header>
+        <div class="sticky">this is header</div>
+    </header>
     <h2>relative</h2>
     <div class="relative-box">
         <div class="circle"></div>
     </div>
+    <div class="fixed"></div>
     <div class="door">
         
         <div class="single-door left"></div>
         <div class="single-door right"></div>
         <h2 class="welcome">Welcome</h2>
     </div>
+    
 </body>
 </html>
