--- a/after-before.html
+++ b/after-before.html
@@ -13,6 +13,14 @@
     <div class="container">
         <h2>"The true sign of intelligence is not knowledge but imagination"</h2>
     </div>
+    <div class="about">
+        <h2>About Us</h2>
+        <i class="fa-solid fa-heart-pulse"></i>
+    </div>
+    <div class="style">
+        <h2>Our Style</h2>
+        <div class="red-line"></div>
+    </div>
     
 </body>
 </html>
