--- a/after-before.html
+++ b/after-before.html
@@ -21,6 +21,9 @@
         <h2>Our Style</h2>
         <div class="red-line"></div>
     </div>
-    
+    <div class="imgbox">
+        <h3>deer</h3>
+        <div class="border"></div>
+    </div>
 </body>
 </html>
