--- a/after-before.html
+++ b/after-before.html
@@ -25,5 +25,9 @@
         <h3>deer</h3>
         <div class="border"></div>
     </div>
+    <div class="imgbox1">
+        <h3>Waterfall</h3>
+        <div class="border1"></div>
+    </div>
 </body>
 </html>
