--- a/after-before.html
+++ b/after-before.html
@@ -15,7 +15,10 @@
     </div>
     <div class="about">
         <h2>About Us</h2>
-        <i class="fa-solid fa-heart-pulse"></i>
+        <span>
+            <i class="fa-solid fa-heart-pulse"></i>
+        </span>
+        
     </div>
     <div class="style">
         <h2>Our Style</h2>
