--- a/after-before.html
+++ b/after-before.html
@@ -32,5 +32,9 @@
         <h3>Waterfall</h3>
         <div class="border1"></div>
     </div>
+    <div class="food">
+        <div class="food-box effect-1"></div>
+        <div class="food-box effect-2"></div>
+    </div>
 </body>
 </html>
