--- a/after-before.html
+++ b/after-before.html
@@ -34,7 +34,12 @@
     </div>
     <div class="food">
         <div class="food-box effect-1"></div>
-        <div class="food-box effect-2"></div>
+        <div class="food-box effect-2">
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-solid fa-x"></i></a>
+        </div>
     </div>
 </body>
 </html>
