added first button

--- a/after-before.html
+++ b/after-before.html
@@ -41,5 +41,15 @@
             <a href="#"><i class="fa-solid fa-x"></i></a>
         </div>
     </div>
+    <div class="button">
+        <div class="effect-3">
+            <a href="#">Click Me</a>
+        </div>
+    </div>
+    <div class="button2">
+        <div class="effect-4">
+            <a href="#">Click Me</a>
+        </div>
+    </div>
 </body>
 </html>
