--- a/after-before.html
+++ b/after-before.html
@@ -48,7 +48,7 @@
     </div>
     <div class="button2">
         
-            <a href="#">Click Me</a>
+            <a href="www.google.com">Click Me</a>
         
     </div>
 </body>
