--- a/after-before.html
+++ b/after-before.html
@@ -35,10 +35,10 @@
     <div class="food">
         <div class="food-box effect-1"></div>
         <div class="food-box effect-2">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-x"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://web.whatsapp.com/"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/accounts/login/?hl=en"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://x.com/i/flow/login?lang=en"><i class="fa-solid fa-x"></i></a>
         </div>
     </div>
     <div class="button">
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="button2">
-        <a href="www.google.com">Click Me</a>
+        <a href="https://www.google.co.in/">Click Me</a>
     </div>
 </body>
 </html>
