--- a/flex.html
+++ b/flex.html
@@ -9,6 +9,97 @@
 </head>
 <body>
     <h1>Flex Properties</h1>
+    <h2>Display: flex</h2>
+    <div class="container">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-wrap: wrap</h2>
+    <div class="container flex-wrap">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-wrap: wrap</h2>
+    <div class="container flex-wrap-rev">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-direction: row</h2>
+    <div class="container flex-wrap flex-dir-row">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-direction: column</h2>
+    <div class="container flex-wrap flex-dir-col">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-direction: row-reverse</h2>
+    <div class="container flex-wrap flex-dir-row-rev">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>flex-direction: column-reverse</h2>
+    <div class="container flex-wrap flex-dir-col-rev">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
     
 </body>
 </html>
