--- a/after-before.html
+++ b/after-before.html
@@ -48,5 +48,12 @@
     <div class="button2">
         <a href="https://www.google.co.in/">Click Me</a>
     </div>
+    <div class="imgbox3">
+        <div class="title">
+            <span>STRANGE</span>
+            <h2>DEXTER</h2>
+        </div>
+        <p>DEXTER HAD THIS OWN STRANGE WAY. YOU COULD WATCH HIM TRAINING ANTS.</p>
+    </div>
 </body>
 </html>
