--- a/after-before.html
+++ b/after-before.html
@@ -52,7 +52,9 @@
         <div class="title">
             <span>STRANGE</span>
             <h2>DEXTER</h2>
+            <div class="effect"></div>
         </div>
+       
         <p>DEXTER HAD THIS OWN STRANGE WAY. YOU COULD WATCH HIM TRAINING ANTS.</p>
     </div>
 </body>
