--- a/after-before.html
+++ b/after-before.html
@@ -54,8 +54,12 @@
             <h2>DEXTER</h2>
             <div class="effect"></div>
         </div>
-       
         <p>DEXTER HAD THIS OWN STRANGE WAY. YOU COULD WATCH HIM TRAINING ANTS.</p>
+    </div>
+    <div class="imgbox4">
+        <div class="flower">
+            <h2>Sunflower</h2>
+        </div>
     </div>
 </body>
 </html>
