--- a/flex.html
+++ b/flex.html
@@ -100,6 +100,145 @@
         <div class="box1">9</div>
         <div class="box2">10</div>
     </div>
-    
+    <h2>justify-content: start</h2>
+    <div class="container flex-wrap justify-content-start">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>justify-content: center</h2>
+    <div class="container flex-wrap justify-content-center">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>justify-content: flex-end</h2>
+    <div class="container flex-wrap justify-content-end">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>justify-content: between</h2>
+    <div class="container flex-wrap justify-content-between">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>justify-content: around</h2>
+    <div class="container flex-wrap justify-content-around">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>justify-content: evenly</h2>
+    <div class="container flex-wrap justify-content-evenly">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>align-items: flext-start</h2>
+    <div class="container flex-wrap align-items-start">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>align-items: center</h2>
+    <div class="container flex-wrap align-items-center">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>align-items: flex-end</h2>
+    <div class="container flex-wrap align-items-end">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+    </div>
+    <h2>align-items: flex-end</h2>
+    <div class="container flex-wrap align-items-baseline">
+        <div class="box1"><h4>1</h4></div>
+        <div class="box2"><h5>2</h5></div>
+        <div class="box1"><h3>3</h3></div>
+        <div class="box1"><h6>4</h6></div>
+        <div class="box2"><h5>5</h5></div>
+    </div>
+    <h2>align-items: stretch</h2>
+    <div class="container flex-wrap align-items-stretch">
+        <div class="box3"><h4>1</h4></div>
+        <div class="box3"><h5>2</h5></div>
+        <div class="box3"><h3>3</h3></div>
+        <div class="box3"><h6>4</h6></div>
+        <div class="box3"><h5>5</h5></div>
+    </div>
+    <h2>align-content: flext-start</h2>
+    <div class="container flex-wrap align-content-start">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>align-content: center</h2>
+    <div class="container flex-wrap align-content-center">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>align-content: flext-end</h2>
+    <div class="container flex-wrap align-content-end">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
+    <h2>align-content: flext-start</h2>
+    <div class="container flex-wrap align-content-between">
+        <div class="box1">1</div>
+        <div class="box2">2</div>
+        <div class="box1">3</div>
+        <div class="box1">4</div>
+        <div class="box2">5</div>
+        <div class="box1">6</div>
+        <div class="box2">7</div>
+        <div class="box1">8</div>
+        <div class="box1">9</div>
+        <div class="box2">10</div>
+    </div>
 </body>
 </html>
