--- a/image-hover.html
+++ b/image-hover.html
@@ -40,6 +40,13 @@
                 <h2>Sunflower</h2>
             </div>
         </div>
+        <div class="imgbox5">
+            <h2>Hover Me</h2>
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+            <div class="line4"></div>
+        </div>
     </div>
 </body>
 </html>
