--- a/flex.html
+++ b/flex.html
@@ -240,5 +240,13 @@
         <div class="box1">9</div>
         <div class="box2">10</div>
     </div>
+    <h2>align-self: flex-start</h2>
+    <div class="container flex-wrap align-items-center">
+        <div class="box1">1</div>
+        <div class="box2 self-start">2</div>
+        <div class="box1">3</div>
+        <div class="box1 self-end">4</div>
+        <div class="box2">5</div>
+    </div>
 </body>
 </html>
