--- a/flex.html
+++ b/flex.html
@@ -248,5 +248,24 @@
         <div class="box1 self-end">4</div>
         <div class="box2">5</div>
     </div>
+    <h2>order</h2>
+    <div class="container flex-wrap">
+        <div class="box1 order-3">1</div>
+        <div class="box3 order-2">2</div>
+        <div class="box4 order-2">3</div>
+        <div class="box2 order-3">4</div>
+        <div class="box3 order-1">5</div>
+        <div class="box1 order-2">6</div>
+        <div class="box3 order3">7</div>
+        <div class="box4 order-1">8</div>
+        <div class="box1 order1">9</div>
+        <div class="box4 order4">10</div>
+        <div class="box2 order-2">11</div>
+        <div class="box1 order-1">12</div>
+        <div class="box3">13</div>
+        <div class="box2 order-1">14</div>
+        <div class="box4">15</div>
+        <div class="box2 order1">16</div>
+    </div>
 </body>
 </html>
