--- a/flex.html
+++ b/flex.html
@@ -267,5 +267,23 @@
         <div class="box4">15</div>
         <div class="box2 order1">16</div>
     </div>
+    <div class="container flex-wrap">
+        <div class="box1">1</div>
+        <div class="box3">2</div>
+        <div class="box4">3</div>
+        <div class="box2">4</div>
+        <div class="box3">5</div>
+        <div class="box1">6</div>
+        <div class="box3">7</div>
+        <div class="box4">8</div>
+        <div class="box1">9</div>
+        <div class="box4">10</div>
+        <div class="box2">11</div>
+        <div class="box1">12</div>
+        <div class="box3">13</div>
+        <div class="box2">14</div>
+        <div class="box4">15</div>
+        <div class="box2">16</div>
+    </div>
 </body>
 </html>
